# mon-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  coverage.sh  roadmap.md
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  lint.yml  rust.yml  test.yml
benches/: README.md  mon_benchmarks.rs
docs/: 00_welcome_to_mon.md  01_the_basic_structure.md  02_making_lists_arrays.md  03_reusing_data.md  04_defining_types.md  05_validating_data.md  06_connecting_files.md  07_common_mistakes.md  08_syntax_reference.md  09_EBNF_reference.md  mon_cookbook.md
examples/: simple.rs
src/: api.rs  ast.rs  error.rs  lexer.rs  lib.rs  lsp.rs  parser.rs  resolver.rs  serialization.rs  utils.rs
tests/: api_errors.rs  api_test.rs  cross_file_main.mon  cross_file_schemas.mon  general_test.rs  integration_tests.rs  lsp_queries_test.rs  named_import_main.mon  parser_errors.rs  resolver_test.rs
tests/bad/: alias_to_nothing.json  alias_to_nothing.mon  circular_import_a.json  circular_import_a.mon  circular_import_b.mon  circular_self_spread.json  circular_self_spread.mon  enum_undefined_variant.json  enum_undefined_variant.mon  invalid_bad_spread.json  invalid_bad_spread.mon  invalid_missing_comma.json  invalid_missing_comma.mon  invalid_struct_validation.json  invalid_struct_validation.mon  invalid_unclosed_object.json  invalid_unclosed_object.mon  validation_extra_field.json  validation_extra_field.mon  validation_missing_field.json  validation_missing_field.mon  validation_wrong_type.json  validation_wrong_type.mon
tests/ok/: advanced_types.json  (+29 more)
(+1 files in other folders)
