[package]
name = "mon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] } # Enable the `derive` feature for automatic Serialize/Deserialize implementations
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions = "1.4"

